- Dummy-Daten entfernt
- Movie-Klasse um zusätzliche Attribute erweitert (laut API-Response)

- MovieAPI.fetchMovies() implementiert (JSON via OkHttp + Gson)

- HomeController angepasst:
    - API-Call in initialize() eingebaut
    - observableMovies mit API-Daten befüllt
    - Genre-Filter dynamisch aus geladenen Filmen erzeugt

- Lokale Filterlogik entfernt, durch serverseitige Filterung ersetzt

- Filterung über API implementiert:
    - Suchtext (query) und Genre werden als Query-Parameter übergeben

- UI erweitert:
    - Eingabefelder für releaseYear und ratingFrom hinzugefügt (TextFields)
    - FXML + Controller aktualisiert

- MovieAPI.fetchMoviesWithParams(...) erweitert:
    - unterstützt nun auch releaseYear und ratingFrom als API-Parameter

- module-info.java angepasst:
    - Package models für com.google.gson geöffnet (required for reflection access)

- Package-Struktur erweitert (logic) für saubere Trennung von Logik und UI/Models

- Neue Klasse MovieUtils im Package logic angelegt

- 4 Methoden mit Java Streams implementiert:
    - getMostPopularActor(): häufigster Name im mainCast
    - getLongestMovieTitle(): Länge des längsten Filmtitels
    - countMoviesFrom(): zählt Filme eines bestimmten Regisseurs
    - getMoviesBetweenYears(): alle Filme im gegebenen Jahrbereich

- Neues Testpaket at.ac.fhcampuswien.fhmdb.logic erstellt

- MovieUtilsTest.java hinzugefügt (JUnit 5)
    - getMostPopularActor()
    - getLongestMovieTitle()
    - countMoviesFrom()
    - getMoviesBetweenYears()

- Eigene Testdaten verwendet (individuelle Schauspieler, Regisseure, Titel)

- Projektstruktur an Maven- und Java-Konventionen angepasst:
    - Testklasse korrekt unter src/test/java eingeordnet

--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
@@ -27,11 +27,15 @@
          <Label styleClass="text-white" stylesheets="@styles.css" text="Welcome to FHMDb!" />
       </children>
    </HBox>
+
+   <!-- Such- und Filterleiste -->
    <HBox spacing="5.0" styleClass="background-black" stylesheets="@styles.css">
       <children>
          <JFXButton fx:id="sortBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Sort (asc)" />
-         <TextField fx:id="searchField" prefHeight="25.0" prefWidth="170.0" promptText="Search FHMDb" />
+         <TextField fx:id="searchField" prefHeight="25.0" prefWidth="150.0" promptText="Search FHMDb" />
          <JFXComboBox fx:id="genreComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css" />
+         <TextField fx:id="releaseYearInput" prefHeight="25.0" prefWidth="100.0" promptText="Year" />
+         <TextField fx:id="ratingFromInput" prefHeight="25.0" prefWidth="100.0" promptText="Rating from" />
          <JFXButton fx:id="searchBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Filter" />
       </children>
       <VBox.margin>
@@ -41,5 +45,6 @@
          <Insets bottom="20.0" left="10.0" top="20.0" />
       </padding>
    </HBox>
+
    <JFXListView fx:id="movieListView" styleClass="background-black" style="-fx-background-color: black;" stylesheets="@styles.css" VBox.vgrow="ALWAYS" />
 </VBox>
